--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,31 @@
 cmake_minimum_required(VERSION 3.29)
-project(Pandemic_Planner)
+project(Project_3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Pandemic_Planner main.cpp)
+#recommended by aman to match test environment
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+
+#pull in desired version of catch through cmake automatically, make it available
+Include(FetchContent)
+FetchContent_Declare(
+        Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG        v3.4.0 # seems to work with CLion - if you run into problems, try an older version of catch2 v3
+)
+FetchContent_MakeAvailable(Catch2)
+
+include_directories(src)
+include_directories(test-unit)
+
+add_executable(Main
+        src/main.cpp
+)
+
+add_executable(Tests
+        test-unit/test.cpp
+)
+
+target_link_libraries(Tests PRIVATE Catch2::Catch2WithMain) #link catch to test.cpp file
+# the name here must match that of your testing executable (the one that has test.cpp)
